src/objects/EventApi__Venue__c.object
<CustomObject>
    
    <fields>
        <fullName>Guide__c</fullName>
        <description>Fetching Guide_Id from EventApi__Event__c object</description>
        <formula>EventApi__Event__r.Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guidebook_Location_Import_Id__c</fullName>
        <label>Guidebook Location Import ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidebook_Location_Latitude__c</fullName>
        <label>Guidebook Location Latitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guidebook_Location_Longitude__c</fullName>
        <label>Guidebook Location Longitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Id__c</fullName>
        <externalId>true</externalId>
        <label>Location ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
</CustomObject>